--- a/package.json
+++ b/package.json
@@ -16,14 +16,21 @@
   "dependencies": {
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-facebook-sdk": "^1.0.6",
+    "gatsby-plugin-netlify-cms": "^4.1.26",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.36",
+    "gatsby-plugin-typescript": "^2.1.15",
     "gatsby-plugin-typography": "^2.3.15",
+    "gatsby-source-facebook": "^1.0.3",
+    "gatsby-source-facebook-graphql": "0.0.2",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.2",
+    "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-burger-menu": "^2.6.11",
+    "react-burgers": "^1.3.0",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
     "react-typography": "^0.16.19",
