--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "env-cmd -f .env.dev gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -25,6 +25,7 @@
     "gatsby-source-facebook": "^1.0.3",
     "gatsby-source-facebook-graphql": "0.0.2",
     "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.3.2",
     "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.13.0",
@@ -42,6 +43,7 @@
     "@types/node": "^12.12.3",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "env-cmd": "^10.0.1",
     "prettier": "^1.18.2"
   },
   "repository": {
