--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,4 +17,11 @@ collections:
         fields:
           - {label: Title, name: title, widget: string}
           - {label: Intro text, name: intro, widget: text}
+      - label: "Volunteer Home"
+        name: "volunteer"
+        file: "content/home.md"
+        fields:
+          - {label: Title volunteer, name: titlev, widget: string}
+          - {label: Volunteer intro, name: introv, widget: text}
+          
           
