--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -40,7 +40,7 @@ collections:
           - {label: Donations title, name: donations, widget: string}
           - {label: Donations text, name: donationstext, widget: text} 
           - {label: Creed title, name: creed, widget: string}
-          - {label: Creed text, name: creedtext, widget: text} 
+          - {label: Creed text, name: creedtext, widget: markdown} 
           
           
 
