--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-facebook-sdk": "^1.0.6",
     "gatsby-plugin-netlify-cms": "^4.1.26",
+    "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.36",
     "gatsby-plugin-typescript": "^2.1.15",
@@ -33,6 +34,7 @@
     "react-burger-menu": "^2.6.11",
     "react-burgers": "^1.3.0",
     "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-typography": "^0.16.19",
     "typeface-amita": "0.0.75",
