--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-facebook-sdk": "^1.0.6",
+    "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-netlify-cms": "^4.1.26",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
