--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-transformer-sharp": "^2.3.2",
     "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.13.0",
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-burger-menu": "^2.6.11",
     "react-burgers": "^1.3.0",
