--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-facebook-sdk": "^1.0.6",
     "gatsby-plugin-html-attributes": "^1.0.5",
+    "gatsby-plugin-manifest": "^2.2.26",
     "gatsby-plugin-netlify-cms": "^4.1.26",
+    "gatsby-plugin-offline": "^3.0.18",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.36",
