--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-facebook-analytics": "^2.2.15",
     "gatsby-plugin-facebook-sdk": "^1.0.6",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-manifest": "^2.2.26",
@@ -38,6 +39,7 @@
     "react-burger-menu": "^2.6.11",
     "react-burgers": "^1.3.0",
     "react-dom": "^16.11.0",
+    "react-facebook": "^8.0.4",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-typography": "^0.16.19",
