--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@babel/runtime": "^7.7.2",
+    "can-use-dom": "^0.1.0",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-facebook-analytics": "^2.2.15",
