--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -38,7 +38,7 @@ collections:
           - {label: History title, name: history, widget: string}
           - {label: History text, name: historytext, widget: text} 
           - {label: Donations title, name: donations, widget: string}
-          - {label: Donations text, name: donationstext, widget: text} 
+          - {label: Donations text, name: body, widget: text} 
           
           
           
