--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,8 +29,7 @@ collections:
           - { label: Body, name: body, widget: markdown }
           - label: "Team"
             name: "team"
-
-            widget: list
+            file: "content/test.md"
             fields:
               - { label: Title, name: name, widget: string }
               - { label: Team Body, name: body, widget: markdown }
@@ -45,3 +44,5 @@ collections:
           - { label: History text, name: historytext, widget: text }
           - { label: Donations title, name: donations, widget: string }
           - { label: Donations text, name: donationstext, widget: text }
+
+            
