--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.7.2",
+    "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "can-use-dom": "^0.1.0",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
@@ -29,9 +30,10 @@
     "gatsby-plugin-sharp": "^2.2.36",
     "gatsby-plugin-typescript": "^2.1.15",
     "gatsby-plugin-typography": "^2.3.15",
+    "gatsby-source-contentful": "^2.1.59",
     "gatsby-source-facebook": "^1.0.3",
     "gatsby-source-facebook-graphql": "0.0.2",
-    "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-source-filesystem": "^2.1.37",
     "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.3.2",
     "netlify-cms-app": "^2.9.7",
