--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,7 +29,8 @@ collections:
           - { label: Body, name: body, widget: markdown }
           - label: "Team"
             name: "team"
-            file: "content/test.md"
+            widget: list
+            allow_add: false
             fields:
               - { label: Title, name: name, widget: string }
               - { label: Team Body, name: body, widget: markdown }
