--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@babel/runtime": "^7.7.2",
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
+    "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@contentful/rich-text-types": "^13.4.0",
     "can-use-dom": "^0.1.0",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
