--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-manifest": "^2.2.26",
     "gatsby-plugin-offline": "^3.0.18",
+    "gatsby-plugin-preconnect": "^1.0.5",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.36",
@@ -42,7 +43,6 @@
     "react-burger-menu": "^2.6.11",
     "react-burgers": "^1.3.0",
     "react-dom": "^16.11.0",
-    "react-facebook": "^8.0.4",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-typography": "^0.16.19",
