--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "gatsby-plugin-offline": "^3.0.18",
     "gatsby-plugin-preconnect": "^1.0.5",
     "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.36",
+    "gatsby-plugin-sitemap": "^2.2.22",
     "gatsby-plugin-typescript": "^2.1.15",
     "gatsby-plugin-typography": "^2.3.15",
     "gatsby-source-contentful": "^2.1.59",
