--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "can-use-dom": "^0.1.0",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-csp": "^1.1.3",
     "gatsby-plugin-facebook-sdk": "^1.0.6",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-manifest": "^2.2.26",
