--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-facebook-sdk": "^1.0.6",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-manifest": "^2.2.26",
+    "gatsby-plugin-netlify": "^2.1.27",
     "gatsby-plugin-offline": "^3.0.18",
     "gatsby-plugin-preconnect": "^1.0.5",
     "gatsby-plugin-react-helmet": "^3.1.13",
