--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-source-filesystem": "^2.1.37",
     "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.3.2",
+    "google-map-react": "^1.1.5",
     "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
