Front page card changes

--- a/process.env
+++ b/process.env
@@ -2,3 +2,4 @@ FACEBOOK_GRAPH_TOKEN=EAAjyNLuCoo8BAFvv6MIgLz0v25RMus1nZCSF2KaiX9h4VLb4GQoSJPbMLs
 CONTENTFUL_SPACE_ID=ymq1n6c6oxfq
 CONTENTFUL_ACCESS_TOKEN=sYz37wM7EPwC6D-ty7-WW-TMPeFwJ-1e2JAk5_oGsGc
 CONTENTFUL_PREVIEW_TOKEN=BVnBZ6pbYGyWYl7HbvTmKf0ViOS34Xc6RrQJCR22yYY
+GATSBY_API_KEY=AIzaSyDBdgZ7tWqmHbAsxP5fHM5gaP4CPY4994Q
