--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.3.2",
     "google-map-react": "^1.1.5",
+    "google-maps-react": "^2.0.2",
     "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
@@ -47,8 +48,10 @@
     "react-burger-menu": "^2.6.11",
     "react-burgers": "^1.3.0",
     "react-dom": "^16.11.0",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
+    "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
     "typeface-amita": "0.0.75",
     "typeface-open-sans": "0.0.75",
