--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-burger-menu": "^2.6.11",
     "react-burgers": "^1.3.0",
     "react-dom": "^16.11.0",
+    "react-facebook": "^8.1.4",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
